k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: devsecops
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: devsecops
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: devsecops
spec:
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
